[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Titlescreen.gd" type="Script" id=1]
[ext_resource path="res://Sounds/719429_1.ogg" type="AudioStream" id=2]
[ext_resource path="res://Scripts/AudioStreamPlayer.gd" type="Script" id=3]
[ext_resource path="res://loadingscreen.png" type="Texture" id=4]

[node name="Titlescreen" type="Node"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = 10.0
autoplay = true
script = ExtResource( 3 )

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -45.0
margin_right = 87.0
margin_bottom = -5.0
focus_neighbour_top = NodePath("../StartButton2")
focus_neighbour_bottom = NodePath("../QuitButton")
text = "Start Spel - 2.5D Test"

[node name="StartButton2" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = -95.0
margin_right = 87.0
margin_bottom = -55.0
focus_neighbour_bottom = NodePath("../StartButton")
text = "Start Spel - 3D Test"

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = 5.0
margin_right = 87.0
margin_bottom = 45.0
focus_neighbour_top = NodePath("../StartButton")
text = "Verlaat Spel"

[node name="CenterContainer" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="Loading" type="Sprite" parent="CenterContainer"]
visible = false
position = Vector2( 21, 22 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
[connection signal="finished" from="AudioStreamPlayer" to="AudioStreamPlayer" method="_on_AudioStreamPlayer_finished"]
[connection signal="button_down" from="StartButton" to="." method="_on_StartButton_button_down"]
[connection signal="button_up" from="StartButton" to="." method="_on_StartButton_button_up"]
[connection signal="button_down" from="StartButton2" to="." method="_on_StartButton2_button_down"]
[connection signal="button_up" from="StartButton2" to="." method="_on_StartButton2_button_up"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
